static/birdstrike.css
#map {
    height: 100%;
    width: 100%;
    position: absolute;
    pointer-events: auto;
}

.box {
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0.9;
    width: 100% !important;
}

.stack-top {
    z-index: 9;
    margin-top: 80px;
}

.info-card {
    display: inline-flex;
    width: 100%;
    justify-content: space-between;
}

.side-div {
    height: 175px;
    width: 250px;
    background-color: #1f1e1e;
    margin-top: 20px;
    margin-left: 50px;
    padding-top: 10px;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 10px;
}

.legend {
    margin-right: 50px;
    width: auto;
}

.non-touchable {
    pointer-events: none !important;
}

.box-label {
    color: white;
    margin-bottom: 10px;
    font-weight: bold;
}

.risk-class-st1 {
    color: #FF003D;
    text-align: end;
    font-size: 42px;
    margin-top: 5px;
}

.info-side-div {
    color: grey;
    margin-top: 0px !important;
    margin-bottom: 0px !important;
    text-align: end;
}

.info-slider-radius {
    margin-top: 20px;
    margin-left: 50px;
    margin-right: 50px;
    width: 70%;
}

.info-slider-div {
    width: 55%;
    margin-left: 50px;
    display: inline-flex;
    align-items: baseline;
}

.modal {
    display: none;
    position: fixed;
    left: 0;
    right: 0;
    background-color: #fafafa;
    padding: 0;
    padding-top: 50px !important;
    max-height: 90% !important;
    width: 55%;
    margin: auto;
    overflow-y: auto;
    border-radius: 2px;
    will-change: top;
}

.info-risk-nos {
    color: rgb(212, 212, 212);
    font-weight: bold;
}

.birdstrike-highest {
    color: #3F9B93;
    text-align: end;
    margin-top: 5px;
}

.last-update {
    color: #3F9B93;
    text-align: end;
    font-size: 35px;
    margin-top: 5px;
}

.birdstrike-direction {
    color: #3F9B93;
    text-align: end;
    font-size: 35px;
    margin-top: 5px;
}

.height-legend {
    display: grid;
    padding: 30px;
    width: 50%;
    margin-left: auto !important;
    margin-top: 150px !important;
}

@media (max-device-height: 900px) {
    .side-div {
        height: 140px;
        width: 250px;
        background-color: #1f1e1e;
        margin-top: 20px;
        margin-left: 50px;
        padding-top: 5px;
        padding-left: 20px;
        padding-right: 20px;
        padding-bottom: 5px;
    }
    .height-legend {
        display: grid;
        padding: 30px;
        font-size: 10px;
        width: 50%;
        margin-left: auto !important;
        margin-top: 90px !important;
    }
    .birdstrike-highest {
        color: #3F9B93;
        text-align: end;
        margin-top: 5px;
        font-size: 30px;
        margin-bottom: 0px;
    }
    .info-side-div {
        color: grey;
        margin-top: 0px !important;
        margin-bottom: 0px !important;
        text-align: end;
    }
    .last-update {
        color: #3F9B93;
        text-align: end;
        font-size: 30px;
        margin-top: 5px;
    }
    .birdstrike-direction {
        color: #3F9B93;
        text-align: end;
        font-size: 30px;
        margin-top: 5px;
    }
    .address-lat-lng {
        color: grey;
        margin-top: 0px !important;
        margin-bottom: 0px !important;
        text-align: end;
        font-size: 13px;
    }
}

.loading-bar {
    width: 20% !important;
    margin-left: auto !important;
    margin-right: auto !important;
    text-align: center;
}

.legend-text {
    color: white;
}

.raster-switch {
    margin-right: 50px;
    align-self: center;
    display: contents;
}

.switch label .lever {
    margin-left: 0px !important;
}

.raster-label {
    color: white;
    font-size: 15px;
    margin-bottom: 20px;
}

.color-ft-0-1[type="checkbox"].filled-in:checked+span:not(.lever):after {
    background-color: #42FF00;
    border: 2px solid #42FF00;
}

.color-ft-1-2[type="checkbox"].filled-in:checked+span:not(.lever):after {
    background-color: #A1FF0F;
    border: 2px solid #A1FF0F;
}

.color-ft-2-3[type="checkbox"].filled-in:checked+span:not(.lever):after {
    background-color: #D8FF00;
    border: 2px solid #D8FF00;
}

.color-ft-3-4[type="checkbox"].filled-in:checked+span:not(.lever):after {
    background-color: #EDFF00;
    border: 2px solid #EDFF00;
}

.color-ft-4-5[type="checkbox"].filled-in:checked+span:not(.lever):after {
    background-color: #FFE207;
    border: 2px solid #FFE207;
}

.color-ft-5-6[type="checkbox"].filled-in:checked+span:not(.lever):after {
    background-color: #FFBF00;
    border: 2px solid #FFBF00;
}

.color-ft-6-7[type="checkbox"].filled-in:checked+span:not(.lever):after {
    background-color: #FF8900;
    border: 2px solid #FF8900;
}

.color-ft-7-8[type="checkbox"].filled-in:checked+span:not(.lever):after {
    background-color: #FF3802;
    border: 2px solid #FF3802;
}

.color-ft-8-9[type="checkbox"].filled-in:checked+span:not(.lever):after {
    background-color: #FF003D;
    border: 2px solid #FF003D;
}

.color-ft-9-10[type="checkbox"].filled-in:checked+span:not(.lever):after {
    background-color: #FF03B9;
    border: 2px solid #FF03B9;
}

